--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -15,6 +15,8 @@ jobs:
 
       - name: Create auth.txt from GitHub Secrets
         run: |
+          echo "AUTH_USERNAME Length: ${#AUTH_USERNAME}"
+          echo "AUTH_PASSWORD Length: ${#AUTH_PASSWORD}"
           echo "${{ secrets.AUTH_USERNAME }}" > auth.txt
           echo "${{ secrets.AUTH_PASSWORD }}" >> auth.txt
 
