--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -15,13 +15,8 @@ jobs:
 
       - name: Create auth.txt from GitHub Secrets
         run: |
-          echo "AUTH_USERNAME Length: ${#AUTH_USERNAME}"
-          echo "AUTH_PASSWORD Length: ${#AUTH_PASSWORD}"
-          echo "${{ secrets.AUTH_USERNAME }}" > auth.txt
-          echo "${{ secrets.AUTH_PASSWORD }}" >> auth.txt
-
-      - name: Upload auth.txt as an artifact (Downloadable)
-        uses: actions/upload-artifact@v4
-        with:
-          name: auth-file
-          path: auth.txt
+              echo "AUTH_USERNAME Length: ${#ABC}"
+              echo "AUTH_PASSWORD Length: ${#ABC123}"
+        env:
+          AUTH_USERNAME: ${{ secrets.ABC }}
+          AUTH_PASSWORD: ${{ secrets.ABC123 }}
